--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 # Prerequisites
 *.d
 
+CMakeFiles
+cmake_install.cmake
+CMakeCache.txt
+GG
+GG_tests
+Makefile
+coverage.info
+coverage_report
+
 # Compiled Object files
 *.slo
 *.lo
