fix: project name from GG to GBT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(SOURCE_FLAGS -Wall -Wextra -Wpedantic -Werror)
 set(TEST_FLAGS -Wall -Wpedantic -Werror --coverage)  # Add coverage only for tests
 
-project(GG)
+project(GBT)
 
 # Debug mode by default
 if(NOT CMAKE_BUILD_TYPE)
@@ -20,19 +20,19 @@ find_library(CRITERION_LIBRARY NAMES criterion REQUIRED)
 find_path(CRITERION_INCLUDE_DIR NAMES criterion/criterion.h REQUIRED)
 
 # ========= FILES =========
-file(GLOB_RECURSE GG_SOURCES "src/*.cc")
-file(GLOB_RECURSE GG_SOURCES_CPU "src/cpu/*.cc")
-file(GLOB_RECURSE GG_TESTS "tests/*.cc")
+file(GLOB_RECURSE GBT_SOURCES "src/*.cc")
+file(GLOB_RECURSE GBT_SOURCES_CPU "src/cpu/*.cc")
+file(GLOB_RECURSE GBT_TESTS "tests/*.cc")
 
 # ========= EXECUTABLES =========
 
 # Source
-add_executable(GG ${GG_SOURCES})
-target_link_libraries(GG PRIVATE SDL2::SDL2)
-target_compile_options(GG PRIVATE ${SOURCE_FLAGS})
+add_executable(GBT ${GBT_SOURCES})
+target_link_libraries(GBT PRIVATE SDL2::SDL2)
+target_compile_options(GBT PRIVATE ${SOURCE_FLAGS})
 
 # Test cpu model
-add_executable(tests_cpu ${GG_TESTS} ${GG_SOURCES_CPU})
+add_executable(tests_cpu ${GBT_TESTS} ${GBT_SOURCES_CPU})
 target_include_directories(tests_cpu PRIVATE ${CRITERION_INCLUDE_DIR})
 target_link_libraries(tests_cpu PRIVATE ${CRITERION_LIBRARY})
 target_compile_options(tests_cpu PRIVATE ${TEST_FLAGS})
@@ -41,7 +41,7 @@ target_link_options(tests_cpu PRIVATE ${TEST_FLAGS})
 # ========= TARGETS =========
 
 add_custom_target(run_clean
-    COMMAND rm -fr CMakeFiles cmake_install.cmake CMakeCache.txt GG tests_cpu Makefile coverage.info coverage_report
+    COMMAND rm -fr CMakeFiles cmake_install.cmake CMakeCache.txt GBT tests_cpu Makefile coverage.info coverage_report
 )
 
 # Generate coverage reports
